// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav should change width after clicking on burger icon 1`] = `
.c11 {
  font-size: 16px;
  cursor: inherit;
}

.c11 * {
  fill: #555;
}

.c7 {
  display: block;
  position: absolute;
  width: calc(16px * 1.33);
  height: calc(16px * 0.2);
  background: #555;
  border-radius: calc(16px * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c7:nth-child(1) {
  top: 0px;
}

.c7:nth-child(2) {
  top: calc(16px * 0.4);
}

.c7:nth-child(3) {
  top: calc(16px * 0.8);
}

.c5 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(16px * 1.33);
  height: 16px;
  position: relative;
  margin: 10px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c5 .c6:nth-child(1) {
  top: calc(16px * 0.4);
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c5 .c6:nth-child(2) {
  opacity: 0;
  left: -60px;
}

.c5 .c6:nth-child(3) {
  top: calc(16px * 0.4);
  -webkit-transform: rotate(-135deg);
  -ms-transform: rotate(-135deg);
  transform: rotate(-135deg);
}

.c13 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c2 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: transparent;
  display: grid;
  grid-template-areas: 'icon header' 'icon submenu';
  grid-template-rows: min-content min-content;
  grid-template-columns: min-content 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 35px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c2 .c10 {
  grid-area: icon;
}

.c2 > .c12 {
  grid-area: header;
  font-size: 16px;
  color: #ffffff;
  font-weight: 400;
}

.c14 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: #7C7B7B;
  display: grid;
  grid-template-areas: 'icon header' 'icon submenu';
  grid-template-rows: min-content min-content;
  grid-template-columns: min-content 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 35px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c14 .c10 {
  grid-area: icon;
}

.c14 > .c12 {
  grid-area: header;
  font-size: 16px;
  color: #ffffff;
  font-weight: 700;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
  padding: 0px;
  margin: 0px;
  list-style-type: none;
  color: #ffffff;
}

.c9 .c10 {
  font-size: 24px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 60px;
  min-height: 60px;
}

.c15 .c10 {
  font-size: 24px;
}

.c15 .c1 {
  overflow: unset;
}

.c15 .c12 {
  cursor: default;
}

.c16 .c4 * {
  background: #ffffff;
}

.c16 .c12,
.c16 .c8 {
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c0 {
  height: 100vh;
  background-color: #999999;
  width: 0px;
  position: fixed;
  z-index: 1;
  top: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
  width: 250px;
  background-color: #FE8D6B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 ul::-webkit-scrollbar {
  width: 5px;
  background-color: #FE8D6B;
}

.c0 ul::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: #7C7B7B;
}

.c0 svg * {
  fill: #ffffff;
}

.c0 .c4 * {
  background: #ffffff;
}

.c0 .c12,
.c0 .c8 {
  opacity: 1;
  -webkit-transition: opacity 0.4s;
  transition: opacity 0.4s;
}

.c0 .c17 {
  max-height: 500px;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}

<div
  class="c0"
  data-testid="sidenav"
  open=""
>
  <div
    class="c1 c2"
  >
    <div
      class="c3"
    >
      <button
        class="c4 c5"
        id="burgerIcon"
        open=""
      >
        <span
          class="c6 c7"
        />
        <span
          class="c6 c7"
        />
        <span
          class="c6 c7"
        />
      </button>
    </div>
    <div
      class="c8 "
    />
  </div>
  <ul
    class="c9"
  >
    <li
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <svg
          class="c10 c11"
          height="1em"
          viewBox="0 0 576 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
          />
        </svg>
      </div>
      <span
        class="c12 c13"
      >
        Home
      </span>
    </li>
    <li
      class="c1 c14"
    >
      <div
        class="c3"
      >
        <svg
          class="c10 c11"
          height="1em"
          viewBox="0 0 18 18"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.5 11h-.79l-.28-.27A6.471 6.471 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L17.49 16l-4.99-5zm-6 0C4.01 11 2 8.99 2 6.5S4.01 2 6.5 2 11 4.01 11 6.5 8.99 11 6.5 11z"
            fill="none"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="c12 c13"
      >
        Search
      </span>
    </li>
  </ul>
</div>
`;

exports[`SideNav should change width when clicked on item with sidenavOpenCloseOnClick prop given 1`] = `
.c11 {
  font-size: 16px;
  cursor: inherit;
}

.c11 * {
  fill: #555;
}

.c7 {
  display: block;
  position: absolute;
  width: calc(16px * 1.33);
  height: calc(16px * 0.2);
  background: #555;
  border-radius: calc(16px * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c7:nth-child(1) {
  top: 0px;
}

.c7:nth-child(2) {
  top: calc(16px * 0.4);
}

.c7:nth-child(3) {
  top: calc(16px * 0.8);
}

.c5 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(16px * 1.33);
  height: 16px;
  position: relative;
  margin: 10px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c5 .c6:nth-child(1) {
  top: calc(16px * 0.4);
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c5 .c6:nth-child(2) {
  opacity: 0;
  left: -60px;
}

.c5 .c6:nth-child(3) {
  top: calc(16px * 0.4);
  -webkit-transform: rotate(-135deg);
  -ms-transform: rotate(-135deg);
  transform: rotate(-135deg);
}

.c13 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c2 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: transparent;
  display: grid;
  grid-template-areas: 'icon header' 'icon submenu';
  grid-template-rows: min-content min-content;
  grid-template-columns: min-content 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 35px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c2 .c10 {
  grid-area: icon;
}

.c2 > .c12 {
  grid-area: header;
  font-size: 16px;
  color: #ffffff;
  font-weight: 400;
}

.c14 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: #7C7B7B;
  display: grid;
  grid-template-areas: 'icon header' 'icon submenu';
  grid-template-rows: min-content min-content;
  grid-template-columns: min-content 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 35px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c14 .c10 {
  grid-area: icon;
}

.c14 > .c12 {
  grid-area: header;
  font-size: 16px;
  color: #ffffff;
  font-weight: 700;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
  padding: 0px;
  margin: 0px;
  list-style-type: none;
  color: #ffffff;
}

.c9 .c10 {
  font-size: 24px;
}

.c16 {
  grid-area: submenu;
  padding: 0px;
  margin: 0px;
  max-height: 0;
  overflow: hidden;
  box-sizing: border-box;
}

.c16 .c1 {
  min-height: 30px;
}

.c16 .c1 .c10 + .c12 {
  margin-left: 5px;
}

.c16 .c1 .c12 + .c10 {
  margin-left: 5px;
}

.c16 ul {
  margin-top: 10px;
  padding-left: 15px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 60px;
  min-height: 60px;
}

.c17 .c10 {
  font-size: 24px;
}

.c17 .c1 {
  overflow: unset;
}

.c17 .c12 {
  cursor: default;
}

.c18 .c4 * {
  background: #ffffff;
}

.c18 .c12,
.c18 .c8 {
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c18 .c15 {
  max-height: 0px;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0 {
  height: 100vh;
  background-color: #999999;
  width: 0px;
  position: fixed;
  z-index: 1;
  top: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
  width: 250px;
  background-color: #FE8D6B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 ul::-webkit-scrollbar {
  width: 5px;
  background-color: #FE8D6B;
}

.c0 ul::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: #7C7B7B;
}

.c0 svg * {
  fill: #ffffff;
}

.c0 .c4 * {
  background: #ffffff;
}

.c0 .c12,
.c0 .c8 {
  opacity: 1;
  -webkit-transition: opacity 0.4s;
  transition: opacity 0.4s;
}

.c0 .c15 {
  max-height: 500px;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}

<div
  class="c0"
  data-testid="sidenav"
  open=""
>
  <div
    class="c1 c2"
  >
    <div
      class="c3"
    >
      <button
        class="c4 c5"
        id="burgerIcon"
        open=""
      >
        <span
          class="c6 c7"
        />
        <span
          class="c6 c7"
        />
        <span
          class="c6 c7"
        />
      </button>
    </div>
    <div
      class="c8 "
    />
  </div>
  <ul
    class="c9"
  >
    <li
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <svg
          class="c10 c11"
          height="1em"
          viewBox="0 0 576 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
          />
        </svg>
      </div>
      <span
        class="c12 c13"
      >
        Home
      </span>
    </li>
    <li
      class="c1 c14"
    >
      <div
        class="c3"
      >
        <svg
          class="c10 c11"
          height="1em"
          viewBox="0 0 18 18"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.5 11h-.79l-.28-.27A6.471 6.471 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L17.49 16l-4.99-5zm-6 0C4.01 11 2 8.99 2 6.5S4.01 2 6.5 2 11 4.01 11 6.5 8.99 11 6.5 11z"
            fill="none"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="c12 c13"
      >
        Search
      </span>
      <ul
        class="c15 c16"
      >
        <li
          class="c1 c14"
        >
          <span
            class="c12 c13"
          >
            Cars
          </span>
        </li>
        <li
          class="c1 c2"
        >
          <span
            class="c12 c13"
          >
            Bikes
          </span>
        </li>
        <li
          class="c1 c2"
        >
          <span
            class="c12 c13"
          >
            Phones
          </span>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`SideNav should close sidenav if we click outside 1`] = `
.c11 {
  font-size: 16px;
  cursor: inherit;
}

.c11 * {
  fill: #555;
}

.c7 {
  display: block;
  position: absolute;
  width: calc(16px * 1.33);
  height: calc(16px * 0.2);
  background: #555;
  border-radius: calc(16px * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c7:nth-child(1) {
  top: 0px;
}

.c7:nth-child(2) {
  top: calc(16px * 0.4);
}

.c7:nth-child(3) {
  top: calc(16px * 0.8);
}

.c5 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(16px * 1.33);
  height: 16px;
  position: relative;
  margin: 10px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c14 .c6:nth-child(1) {
  top: calc(16px * 0.4);
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c14 .c6:nth-child(2) {
  opacity: 0;
  left: -60px;
}

.c14 .c6:nth-child(3) {
  top: calc(16px * 0.4);
  -webkit-transform: rotate(-135deg);
  -ms-transform: rotate(-135deg);
  transform: rotate(-135deg);
}

.c13 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c2 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: transparent;
  display: grid;
  grid-template-areas: 'icon header' 'icon submenu';
  grid-template-rows: min-content min-content;
  grid-template-columns: min-content 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 35px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c2 .c10 {
  grid-area: icon;
}

.c2 > .c12 {
  grid-area: header;
  font-size: 16px;
  color: #ffffff;
  font-weight: 400;
}

.c15 .c10 {
  grid-area: icon;
}

.c15 > .c12 {
  grid-area: header;
  font-size: 16px;
  color: #ffffff;
  font-weight: 700;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
  padding: 0px;
  margin: 0px;
  list-style-type: none;
  color: #ffffff;
}

.c9 .c10 {
  font-size: 24px;
}

.c16 .c1 {
  min-height: 30px;
}

.c16 .c1 .c10 + .c12 {
  margin-left: 5px;
}

.c16 .c1 .c12 + .c10 {
  margin-left: 5px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 60px;
  min-height: 60px;
}

.c17 .c10 {
  font-size: 24px;
}

.c17 .c1 {
  overflow: unset;
}

.c17 .c12 {
  cursor: default;
}

.c0 {
  height: 100vh;
  background-color: #999999;
  width: 0px;
  position: fixed;
  z-index: 1;
  top: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
  width: 60px;
  background-color: #FE8D6B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 ul::-webkit-scrollbar {
  width: 5px;
  background-color: #FE8D6B;
}

.c0 ul::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: #7C7B7B;
}

.c0 svg * {
  fill: #ffffff;
}

.c0 .c4 * {
  background: #ffffff;
}

.c0 .c12,
.c0 .c8 {
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c0 .c19 {
  max-height: 0px;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c18 .c4 * {
  background: #ffffff;
}

.c18 .c12,
.c18 .c8 {
  opacity: 1;
  -webkit-transition: opacity 0.4s;
  transition: opacity 0.4s;
}

<div
  class="c0"
  data-testid="sidenav"
>
  <div
    class="c1 c2"
  >
    <div
      class="c3"
    >
      <button
        class="c4 c5"
        id="burgerIcon"
      >
        <span
          class="c6 c7"
        />
        <span
          class="c6 c7"
        />
        <span
          class="c6 c7"
        />
      </button>
    </div>
    <div
      class="c8 "
    />
  </div>
  <ul
    class="c9"
  >
    <li
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <svg
          class="c10 c11"
          height="1em"
          viewBox="0 0 576 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
          />
        </svg>
      </div>
      <span
        class="c12 c13"
      >
        Home
      </span>
    </li>
  </ul>
</div>
`;

exports[`SideNav should render properly 1`] = `
.c9 {
  font-size: 16px;
  cursor: inherit;
}

.c9 * {
  fill: #555;
}

.c6 {
  display: block;
  position: absolute;
  width: calc(16px * 1.33);
  height: calc(16px * 0.2);
  background: #555;
  border-radius: calc(16px * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c6:nth-child(1) {
  top: 0px;
}

.c6:nth-child(2) {
  top: calc(16px * 0.4);
}

.c6:nth-child(3) {
  top: calc(16px * 0.8);
}

.c5 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(16px * 1.33);
  height: 16px;
  position: relative;
  margin: 10px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c13 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c2 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: transparent;
  display: grid;
  grid-template-areas: 'icon header' 'icon submenu';
  grid-template-rows: min-content min-content;
  grid-template-columns: min-content 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 35px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c2 .c8 {
  grid-area: icon;
}

.c2 > .c12 {
  grid-area: header;
  font-size: 16px;
  color: #ffffff;
  font-weight: 400;
}

.c11 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: #7C7B7B;
  display: grid;
  grid-template-areas: 'icon header' 'icon submenu';
  grid-template-rows: min-content min-content;
  grid-template-columns: min-content 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 35px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c11 .c8 {
  grid-area: icon;
}

.c11 > .c12 {
  grid-area: header;
  font-size: 16px;
  color: #ffffff;
  font-weight: 700;
}

.c10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
  padding: 0px;
  margin: 0px;
  list-style-type: none;
  color: #ffffff;
}

.c10 .c8 {
  font-size: 24px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 60px;
  min-height: 60px;
}

.c14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
  padding: 0px;
  margin: 0px;
  list-style-type: none;
  color: #ffffff;
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  overflow: unset;
}

.c14 .c8 {
  font-size: 24px;
}

.c14 .c1 {
  overflow: unset;
}

.c14 .c12 {
  cursor: default;
}

.c0 {
  height: 100vh;
  background-color: #999999;
  width: 0px;
  position: fixed;
  z-index: 1;
  top: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
  width: 60px;
  background-color: #FE8D6B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 ul::-webkit-scrollbar {
  width: 5px;
  background-color: #FE8D6B;
}

.c0 ul::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: #7C7B7B;
}

.c0 svg * {
  fill: #ffffff;
}

.c0 .c4 * {
  background: #ffffff;
}

.c0 .c12,
.c0 .c7 {
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c0 .c15 {
  max-height: 0px;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

<div>
  <div
    class="c0"
    data-testid="sidenav"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <button
          class="c4 c5"
          id="burgerIcon"
        >
          <span
            class="c6"
          />
          <span
            class="c6"
          />
          <span
            class="c6"
          />
        </button>
      </div>
      <div
        class="c7 "
      >
        <svg
          class="c8 c9"
          height="1em"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14 8H8v6H6V8H0V6h6V0h2v6h6z"
            fill="none"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <ul
      class="c10"
    >
      <li
        class="c1 c11"
      >
        <div
          class="c3"
        >
          <svg
            class="c8 c9"
            height="1em"
            viewBox="0 0 18 18"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.5 11h-.79l-.28-.27A6.471 6.471 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L17.49 16l-4.99-5zm-6 0C4.01 11 2 8.99 2 6.5S4.01 2 6.5 2 11 4.01 11 6.5 8.99 11 6.5 11z"
              fill="none"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <span
          class="c12 c13"
        >
          Search
        </span>
      </li>
    </ul>
    <ul
      class="c14"
    >
      <li
        class="c1 c2"
      >
        <div
          class="c3"
        >
          <svg
            class="c8 c9"
            height="1em"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
            />
          </svg>
        </div>
        <span
          class="c12 c13"
        >
          Home
        </span>
      </li>
    </ul>
  </div>
</div>
`;
